Fix T70766 EEVEE: Performance drop with node tree in 2.81